// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alignment 1`] = `
<div>
  <div
    className="el-row el-row--flex row-bg"
    style={Object {}}
  >
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple-light"
      />
    </div>
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
  </div>
  <div
    className="el-row is-justify-center el-row--flex row-bg"
    style={Object {}}
  >
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple-light"
      />
    </div>
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
  </div>
  <div
    className="el-row is-justify-end el-row--flex row-bg"
    style={Object {}}
  >
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple-light"
      />
    </div>
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
  </div>
  <div
    className="el-row is-justify-space-between el-row--flex row-bg"
    style={Object {}}
  >
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple-light"
      />
    </div>
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
  </div>
  <div
    className="el-row is-justify-space-around el-row--flex row-bg"
    style={Object {}}
  >
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple-light"
      />
    </div>
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
  </div>
</div>
`;

exports[`Basic layout 1`] = `
<div>
  <div
    className="el-row"
    style={Object {}}
  >
    <div
      className="el-col el-col-24"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple-dark"
      />
    </div>
  </div>
  <div
    className="el-row"
    style={Object {}}
  >
    <div
      className="el-col el-col-12"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-12"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple-light"
      />
    </div>
  </div>
  <div
    className="el-row"
    style={Object {}}
  >
    <div
      className="el-col el-col-8"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-8"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple-light"
      />
    </div>
    <div
      className="el-col el-col-8"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
  </div>
  <div
    className="el-row"
    style={Object {}}
  >
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple-light"
      />
    </div>
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-6"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple-light"
      />
    </div>
  </div>
  <div
    className="el-row"
    style={Object {}}
  >
    <div
      className="el-col el-col-4"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-4"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple-light"
      />
    </div>
    <div
      className="el-col el-col-4"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-4"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple-light"
      />
    </div>
    <div
      className="el-col el-col-4"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-4"
      style={Object {}}
    >
      <div
        className="grid-content bg-purple-light"
      />
    </div>
  </div>
</div>
`;

exports[`Column offset 1`] = `
<div>
  <div
    className="el-row"
    style={
      Object {
        "marginLeft": "-10px",
        "marginRight": "-10px",
      }
    }
  >
    <div
      className="el-col el-col-6"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
        }
      }
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-6 el-col-offset-6"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
        }
      }
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
  </div>
  <div
    className="el-row"
    style={
      Object {
        "marginLeft": "-10px",
        "marginRight": "-10px",
      }
    }
  >
    <div
      className="el-col el-col-6 el-col-offset-6"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
        }
      }
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-6 el-col-offset-6"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
        }
      }
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
  </div>
  <div
    className="el-row"
    style={
      Object {
        "marginLeft": "-10px",
        "marginRight": "-10px",
      }
    }
  >
    <div
      className="el-col el-col-12 el-col-offset-6"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
        }
      }
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
  </div>
</div>
`;

exports[`Column spacing 1`] = `
<div
  className="el-row"
  style={
    Object {
      "marginLeft": "-10px",
      "marginRight": "-10px",
    }
  }
>
  <div
    className="el-col el-col-6"
    style={
      Object {
        "paddingLeft": "10px",
        "paddingRight": "10px",
      }
    }
  >
    <div
      className="grid-content bg-purple"
    />
  </div>
  <div
    className="el-col el-col-6"
    style={
      Object {
        "paddingLeft": "10px",
        "paddingRight": "10px",
      }
    }
  >
    <div
      className="grid-content bg-purple"
    />
  </div>
  <div
    className="el-col el-col-6"
    style={
      Object {
        "paddingLeft": "10px",
        "paddingRight": "10px",
      }
    }
  >
    <div
      className="grid-content bg-purple"
    />
  </div>
  <div
    className="el-col el-col-6"
    style={
      Object {
        "paddingLeft": "10px",
        "paddingRight": "10px",
      }
    }
  >
    <div
      className="grid-content bg-purple"
    />
  </div>
</div>
`;

exports[`Hybrid layout 1`] = `
<div>
  <div
    className="el-row"
    style={
      Object {
        "marginLeft": "-10px",
        "marginRight": "-10px",
      }
    }
  >
    <div
      className="el-col el-col-16"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
        }
      }
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-8"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
        }
      }
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
  </div>
  <div
    className="el-row"
    style={
      Object {
        "marginLeft": "-10px",
        "marginRight": "-10px",
      }
    }
  >
    <div
      className="el-col el-col-8"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
        }
      }
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-8"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
        }
      }
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-4"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
        }
      }
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-4"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
        }
      }
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
  </div>
  <div
    className="el-row"
    style={
      Object {
        "marginLeft": "-10px",
        "marginRight": "-10px",
      }
    }
  >
    <div
      className="el-col el-col-4"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
        }
      }
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-16"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
        }
      }
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
    <div
      className="el-col el-col-4"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
        }
      }
    >
      <div
        className="grid-content bg-purple"
      />
    </div>
  </div>
</div>
`;

exports[`Responsive Layout 1`] = `
<div
  className="el-row"
  style={
    Object {
      "marginLeft": "-5px",
      "marginRight": "-5px",
    }
  }
>
  <div
    className="el-col el-col-24 el-col-xs-8 el-col-sm-6 el-col-md-4 el-col-lg-3"
    style={
      Object {
        "paddingLeft": "5px",
        "paddingRight": "5px",
      }
    }
  >
    <div
      className="grid-content bg-purple"
    />
  </div>
  <div
    className="el-col el-col-24 el-col-xs-4 el-col-sm-6 el-col-md-8 el-col-lg-9"
    style={
      Object {
        "paddingLeft": "5px",
        "paddingRight": "5px",
      }
    }
  >
    <div
      className="grid-content bg-purple-light"
    />
  </div>
  <div
    className="el-col el-col-24 el-col-xs-4 el-col-sm-6 el-col-md-8 el-col-lg-9"
    style={
      Object {
        "paddingLeft": "5px",
        "paddingRight": "5px",
      }
    }
  >
    <div
      className="grid-content bg-purple"
    />
  </div>
  <div
    className="el-col el-col-24 el-col-xs-8 el-col-sm-6 el-col-md-4 el-col-lg-3"
    style={
      Object {
        "paddingLeft": "5px",
        "paddingRight": "5px",
      }
    }
  >
    <div
      className="grid-content bg-purple-light"
    />
  </div>
</div>
`;
